fix double scrollbar

--- a/pages/siteevents/siteevents.css
+++ b/pages/siteevents/siteevents.css
@@ -43,7 +43,7 @@
 
 #siteevents {
     width: 100%;
-    height: calc(100% - 216px);
+    height: calc(100% - 280px);
 }
 
 .list-header {
